syntax = "proto3";  
package auth;  
  
// 登录请求  
message LoginRequest {  
  string api_key = 1;  
  string device_id = 2;  
}  
  
// 登录响应  
message LoginResponse {  
  string token = 1;  
  uint64 expires_in = 2;  
}  
  
// 鉴权服务 (无拦截器)  
service AuthService {  
  rpc Login (LoginRequest) returns (LoginResponse);  
}  

